# fastapi-sample-app

./: .goosehints  Dockerfile  dagger.json  docker-compose.yml  models.py  repositories.py  requirements.txt  test_main.py
.dagger/: __init__.py  readme.md
.dagger.new/src/agent/: main.py
.dagger.new/workspace/src/workspace/: main.py
.dagger/diff_parser/: __init__.py  models.py  parser.py  requirements.txt  test_parser.py
.dagger/prompts/: fix_local.txt
.dagger/src/agent/: main.py
.dagger/src/book/: main.py
.dagger/workspace/: dagger.json  pyproject.toml
.dagger/workspace/src/workspace/: __init__.py  main.py  suggestions.py
.github/adr/: 0001-github-suggestions-for-code-review.md
.github/workflows/: dagger.yml
